--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛠️</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Issues</title>
+    <title>Weekly Tools</title>
+    <meta name="description" content="每日更新的开发者工具推荐，来自阮一峰的周刊">
   </head>
   <body>
     <div id="app"></div>
